fixing up quote spacing --- Signed-off-by: Brandon Neth <brandon.neth@hpe.com>

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -100,18 +100,50 @@ div.quote-content {
   flex-grow: 1;
 }
 
-
 div.quote-body {
   font-size: 1.6em;
   padding: 0.7em;
-  margin-top: 0.7em;
-  margin-bottom: 0.7em;
   display: flex;
   flex-direction: row;
   align-items: center;
   background-color: white;
   color: black;
 }
+
+.quote-section {
+  padding-top: 0px;
+}
+
+
+.quote {
+  margin-bottom: 20px;
+  padding: 20px;
+  padding-top: 10px;
+}
+
+.hide-quote {
+  opacity: 0;
+  transition: all 1s;
+  filter: blur(5px);
+  transform: translateX(-100%);
+}
+
+.show-quote {
+  opacity: 1;
+  transition: all 1s;
+  filter: blur(0);
+  transform: translateX(0);
+}
+
+@media(prefers-reduced-motion) {
+  .hide-quote {
+    transition: none;
+  }
+  .show-quote {
+    transition: none;
+  }
+}
+
 .blog {
 width: 80%;
 margin: auto;
@@ -269,3 +301,4 @@ border: 1px var(--chapel-navy);
   margin-bottom: 2em;
   line-height: 1.5;
 }
+
